# Lets-play

./: Backtracking.cpp  Backtracking.h  CMakeLists.txt  main.cpp
List/: List.cpp  List.h  Node.cpp  Node.h
Server/: A* Pathfindig.h  BPCreateObstacules.h  BPGameLogic.h  Backtracking.cpp  Backtracking.h  CMakeLists.txt  GAChromosome.cpp  GAChromosome.h  GAPad.cpp  GAPad.h  GASolver.cpp  GASolver.h  List.h  Matrix.cpp  Matrix.h  configfile  divideImage.h  genLogic.h  main.cpp  matrixNode.cpp  matrixNode.h
Server/List/: List.h
Server/xml/: Generation1.xml  Generation2.xml  Generation3.xml  Generation4.xml  Generation5.xml  Generation6.xml  Generation7.xml  Generation8.xml
docsLetsPlay!/html/: A_5_01Pathfindig_8h.html  A_5_01Pathfindig_8h_source.html  BPCreateObstacules_8h.html  BPCreateObstacules_8h_source.html  BPGameLogic_8h.html  BPGameLogic_8h_source.html  Backtracking_8cpp.html  Backtracking_8cpp_source.html  Backtracking_8h.html  Backtracking_8h_source.html  GAChromosome_8cpp.html  GAChromosome_8cpp_source.html  GAChromosome_8h.html  GAChromosome_8h_source.html  GAPad_8cpp.html  GAPad_8cpp_source.html  GAPad_8h.html  GAPad_8h_source.html  GASolver_8cpp.html  GASolver_8cpp_source.html  GASolver_8h.html  GASolver_8h_source.html  List_8h.html  List_8h_source.html  Matrix_8cpp.html  Matrix_8cpp_source.html  Matrix_8h.html  Matrix_8h_source.html  Node_8h.html  Node_8h_source.html  annotated.html  classAStar-members.html  classAStar.html  classBacktracking-members.html  classBacktracking.html  classGAChromosome-members.html  classGAChromosome.html  classGAPad-members.html  classGAPad.html  classGASolver-members.html  (+372 more)
docsLetsPlay!/latex/: A_5_01Pathfindig_8h.tex  BPCreateObstacules_8h.tex  BPGameLogic_8h.tex  Backtracking_8cpp.tex  Backtracking_8h.tex  GAChromosome_8cpp.tex  GAChromosome_8h.tex  GAPad_8cpp.tex  GAPad_8h.tex  GASolver_8cpp.tex  GASolver_8h.tex  List_8h.tex  Matrix_8cpp.tex  Matrix_8h.tex  annotated.tex  classAStar.tex  classBacktracking.tex  classGAChromosome.tex  classGAPad.tex  classGASolver.tex  classList.tex  classMatrix.tex  divideImage_8h.tex  (+10 more)
(+239 files in other folders)
